Fix z-index m-icon-button (#537)

--- a/packages/modul-components/src/components/icon-button/icon-button.scss
+++ b/packages/modul-components/src/components/icon-button/icon-button.scss
@@ -33,7 +33,7 @@
                 position: absolute;
                 top: 50%;
                 left: 50%;
-                z-index: 0;
+                z-index: -1;
                 display: block;
                 width: $m-touch-size / 2;
                 height: $m-touch-size / 2;
